testing/framework/resources/Functional/Failing/hbase/not_similar.q
select cast(row_key as integer) voter_id, convert_from(onecf['name'], 'UTF8') name, cast(twocf['age'] as integer) age, cast(twocf['registration'] as varchar(20)) registration, cast(threecf['contributions'] as decimal(6,2)) contributions, cast(threecf['voterzone'] as integer) voterzone,cast(fourcf['create_date'] as timestamp) create_date from voter where onecf['name'] not similar to '%(young|u|a|i|e|m)%';
